La til "/Fagvalgsider_Elvebakken_VGS" før alle lenker for å teste om det fungerer
Hvis det fungerer kommer jeg nok til å sitte her i litt for mange timer og trykke ctrl + v foran alle paths... Hva man er villig til å gjøre for å utsette historie ;)

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="https://sondre-nb.github.io/Fagvalgsider_Elvebakken_VGS/">
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/realfag/realfag_soversikt.css">
     <link rel="stylesheet" href="/style/forside.css">
@@ -14,7 +13,7 @@
     <header>
         <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
             <h1>Realfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
@@ -23,11 +22,11 @@
     <main>
         <div id="programområder">
             <div>Programområder: </div>
-            <a href="/realfag/">Realfag</a>
-            <a href="/ssø/">SSØ</a>
-            <a href="/mk/">MK</a>
-            <a href="/kda/">KDA</a>
-            <a href="/idrettsfag/">Idrettsfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/">Realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/">SSØ</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/mk/">MK</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/kda/">KDA</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/idrettsfag/">Idrettsfag</a>
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
