Ting fungerte faktisk itt, så nå er pathene på andre ting også endret
Dette er visst livet mitt nå...

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/realfag/realfag_soversikt.css">
-    <link rel="stylesheet" href="/style/forside.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/realfag/realfag_soversikt.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/forside.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Realfag</title>
 </head>
 <body>
@@ -42,45 +42,45 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="/programfag/fysikk/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/fysikk/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Fysikk</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/kjemi/" class="fag_i_meny">
-                    <img src="/assets/imgs/kjemi/kjemiting.jpg" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/kjemi/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/kjemiting.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Kjemi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/biologi/" class="fag_i_meny">
-                    <img src="/assets/imgs/biologi/dna_grønn.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/biologi/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/dna_grønn.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Biologi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/informasjonsteknologi/" class="fag_i_meny">
-                    <img src="/assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/informasjonsteknologi/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Informasjonsteknologi</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/tekforsk/" class="fag_i_meny">
-                    <img src="/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/tekforsk/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Teknologi og forskningslære</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/geofag/" class="fag_i_meny">
-                    <img src="/assets/imgs/geofag/strand.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/geofag/" class="fag_i_meny">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/geofag/strand.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Geofag</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/r_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/r_matte/" class="fag_i_meny" class="matte-fag">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/s_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/s_matte/" class="fag_i_meny" class="matte-fag">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
-                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
                 <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
