--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/fysikk.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/fysikk/fysikk.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Fysikk</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Fysikk</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -83,8 +83,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/placeholder_fysikk.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/fysikk/placeholder_fysikk.png" alt="Person som driver med kjemi">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="Placeholder fysikk">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="Placeholder fysikk">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -108,7 +108,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -156,8 +156,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/placeholder_fysikk.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/fysikk/placeholder_fysikk.png" alt="Person som driver med kjemi">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="placeholder fysikk">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="Placeholder fysikk">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -193,7 +193,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
 </body>
 </html>
