Fikset og flyttet it

--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/it.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/informasjonsteknologi/it.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Informasjonsteknologi</title>
 </head>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Informasjonsteknologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -77,8 +77,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
-                    <img src="../../assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -101,7 +101,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/rediger_css_spill/" width="370" height="420" style="border: none;"></iframe>
+                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/rediger_css_spill/" width="370" height="420" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -153,8 +153,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
-                    <img src="../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="TODO">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -188,7 +188,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
 </body>
 </html>
