--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/matte_r.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/r_matte/matte_r.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Matematikk-R</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Matematikk-R</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -95,8 +95,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
-                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -122,7 +122,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/vektor_spill/index.html" width="510" height="470" style="border: none;"></iframe>
+                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/vektor_spill/index.html" width="510" height="470" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -183,8 +183,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
-                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -222,8 +222,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
-    <script src="/script/matte.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/matte.js"></script>
 </body>
 </html>
