--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/matte_s.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/s_matte/matte_s.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Matematikk-S</title>
 </head>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Matematikk-S</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -83,8 +83,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
-                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -153,8 +153,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
-                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_s/matte_s_placeholder.png" alt="Placeholder S-matte">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -179,7 +179,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/widgets/tør_du_satse/index.html" width="510" height="430" style="border: none;"></iframe>
+                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/tør_du_satse/index.html" width="510" height="430" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -192,8 +192,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
-    <script src="/script/matte.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/matte.js"></script>
 </body>
 </html>
