Fikset og flyttet engelsk

--- a/programfag/engelsk/index.html
+++ b/programfag/engelsk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/engelsk.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/engelsk/engelsk.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Engelsk</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Engelsk</h1>
             <!-- knapp tilbake til X -->
-            <a href="/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -65,8 +65,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="">
-                    <img src="../../assets/imgs/" alt="">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor ta Engelsk 1?</h3>
@@ -124,8 +124,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="">
-                    <img src="../../assets/imgs/" alt="">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -159,7 +159,7 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
 </body>
 </html>
