--- a/programfag/hifi/index.html
+++ b/programfag/hifi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/hifi.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/hifi/hifi.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Historie og filosofi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Historie og filosofi</h1>
             <!-- knapp tilbake til X -->
-            <a href="/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -67,8 +67,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="PLaceholder">
-                    <img src="../../assets/imgs/" alt="Placeholder">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="PLaceholder">
+                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -94,7 +94,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/script/footer.js"></script>
-    <script src="/script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
 </body>
 </html>
