--- a/programfag/index.html
+++ b/programfag/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/forside.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/forside.css">
+    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Elvebakken Programfag</title>
 </head>
 <body>
     <header>
         <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
             <h1>Elvebakken programfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
@@ -21,11 +21,11 @@
     <main>
         <div id="programområder">
             <div>Programområder: </div>
-            <a href="/realfag/">Realfag</a>
-            <a href="/ssø/">SSØ</a>
-            <a href="/mk/">MK</a>
-            <a href="/kda/">KDA</a>
-            <a href="/idrettsfag/">Idrettsfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/">Realfag</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/">SSØ</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/mk/">MK</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/kda/">KDA</a>
+            <a href="/Fagvalgsider_Elvebakken_VGS/idrettsfag/">Idrettsfag</a>
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
@@ -34,8 +34,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="./script/footer.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
 
-    <script src="./script/global.js"></script>
+    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
 </body>
 </html>
