Fikset widgets paths ++

--- a/widgets/vektor_spill/index.html
+++ b/widgets/vektor_spill/index.html
@@ -7,7 +7,7 @@
     <title>Vektor spill</title>
 </head>
 <body>
-    <div class="spill-tittel-div">Vektorer  <a href="/widgets/vektor_spill/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
+    <div class="spill-tittel-div">Vektorer  <a href="/Fagvalgsider_Elvebakken_VGS/widgets/vektor_spill/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
     <canvas id="vektor-canvas" width="480" height="330"></canvas>
     <div id="level-knapper-div">
         <button id="level-0-knapp">Level 0</button>
