--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="style/forside.css">
-    <link rel="icon" href="assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" href="./style/forside.css">
+    <link rel="icon" href="./assets/icons/favicon.png" type="image/png">
     <title>Elvebakken Programfag</title>
 </head>
 <body>
     <header>
         <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="./assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
             <h1>Elvebakken programfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
