--- a/widgets/tør_du_satse/index.html
+++ b/widgets/tør_du_satse/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
+    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
     <link rel="stylesheet" href="tør_du_satse.css">
     <title>Pengespill</title>
 </head>
