--- a/ssø/index.html
+++ b/ssø/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/ssø/ssø_oversikt.css">
     <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/forside.css">
+    <link rel="stylesheet" href="ssø_oversikt.css">
     <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
     <title>Språk, samfunnsfag og økonomi</title>
 </head>
