Opprettet markedsføring-side
Den eksisterer igjen!

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -62,7 +62,7 @@
                     <p>Kinesisk 2</p>
                     <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/entreprenørskap/" class="fag_i_meny">
+                <a href="/Fagvalgsider_Elvebakken_VGS/programfag/markedsføring_og_ledelse/" class="fag_i_meny">
                     <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Markedsføring og ledelse</p>
                     <img src="/Fagvalgsider_Elvebakken_VGS/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
