--- a/programfag/samfunnsgeografi/index.html
+++ b/programfag/samfunnsgeografi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/samfunnsgeografi/samfunnsgeografi.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./samfunnsgeografi.css">
+    <link rel="icon" href="../..//assets/icons/favicon.png" type="image/png">
     <title>Samfunnsgeografi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Samfunnsgeografi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -61,8 +61,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="PLaceholder">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="PLaceholder">
+                    <img src="../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -92,7 +92,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
 </body>
 </html>
