Fikset path samfunnsøkonomi

--- a/programfag/samfunnsøkonomi/index.html
+++ b/programfag/samfunnsøkonomi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/samfunnsøkonomi/samfunnsøkonomi.css">
-    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./samfunnsøkonomi.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
     <title>Samfunnsøkonomi</title>
 </head>
 <body>
@@ -15,38 +15,38 @@
         <div id="forside-bilde">
             <h1>Samfunnsøkonomi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Samfunnsøkonomi handler om å forstå det 
-                økonomiske samspilletmellom ulike aktører 
-                i privat og offentlig sektor i Norge, og mellom 
-                Norge og andre land. 
+                Samfunnsøkonomi handler om å forstå det
+                økonomiske samspilletmellom ulike aktører
+                i privat og offentlig sektor i Norge, og mellom
+                Norge og andre land.
             </p>
             <p>
-                Økonomisk teori og tenkemåte gir grunnlag for å 
-                forstå sammenhengeri økonomien og økonomisk 
-                politikk. Samfunnsøkonomi skal bidra til en 
-                forståelse av hvordan politiske beslutninger 
-                påvirker økonomi, miljø og velferd. Faget handler 
-                også om hvordan verdier blir skapt og fordelt i 
-                offentlig og privat sektor. Faget forbereder elevene 
-                til videre studier og gir et grunnlag for å delta i 
+                Økonomisk teori og tenkemåte gir grunnlag for å
+                forstå sammenhengeri økonomien og økonomisk
+                politikk. Samfunnsøkonomi skal bidra til en
+                forståelse av hvordan politiske beslutninger
+                påvirker økonomi, miljø og velferd. Faget handler
+                også om hvordan verdier blir skapt og fordelt i
+                offentlig og privat sektor. Faget forbereder elevene
+                til videre studier og gir et grunnlag for å delta i
                 samfunnsdebatt og arbeidsliv.
             </p>
             <p>
-                Samfunnsøkonomi skal bidra til at elevene blir 
-                engasjerte deltakere i samfunnet med forståelse 
+                Samfunnsøkonomi skal bidra til at elevene blir
+                engasjerte deltakere i samfunnet med forståelse
                 av hvordan den økonomiske utviklingen påvirker
-                og legger grunnlag for politiske beslutninger. 
-                Faget fremmer kritisk tenkning og etisk bevissthet 
-                gjennom arbeid med og refleksjoner over hva som 
-                påvirker demokratiske og bærekraftige forholdi 
-                økonomisk sammenheng, og demokratiets 
+                og legger grunnlag for politiske beslutninger.
+                Faget fremmer kritisk tenkning og etisk bevissthet
+                gjennom arbeid med og refleksjoner over hva som
+                påvirker demokratiske og bærekraftige forholdi
+                økonomisk sammenheng, og demokratiets
                 betydning for et lands økonomiske beslutninger.
             </p>
         </div>
@@ -90,16 +90,16 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Faget er både praktisk og teoretisk. Vi bruker i stor grad teoretiske modeller som vi anvender til å drøfte og løse praktiske problemstillinger 
-                        og caser. Vi starter med mikro og markedskrysset/grafer med tilbud og etterspørsel ut fra økonomihøyskole-prinsippet om at modell-«teori er den 
-                        beste praksis». Vi fortsetter med makro, internasjonale forhold, og bærekraftig utvikling. Du lærer å drøfte balansert med fakta, grafer og 
+                        Faget er både praktisk og teoretisk. Vi bruker i stor grad teoretiske modeller som vi anvender til å drøfte og løse praktiske problemstillinger
+                        og caser. Vi starter med mikro og markedskrysset/grafer med tilbud og etterspørsel ut fra økonomihøyskole-prinsippet om at modell-«teori er den
+                        beste praksis». Vi fortsetter med makro, internasjonale forhold, og bærekraftig utvikling. Du lærer å drøfte balansert med fakta, grafer og
                         innhenting av statistiske data. Vi jobber tett med Norges Bank Kunnskapssenteret og konkurransen Case-NM.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="PLaceholder">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="PLaceholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -163,15 +163,15 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Faget er både praktisk og teoretisk. Vi bruker i stor grad teoretiske modeller som vi anvender til å drøfte og løse praktiske problemstillinger 
-                        og caser. Vi starter med mikro og markedskrysset/grafer med tilbud og etterspørsel ut fra økonomihøyskole-prinsippet om at modell-«teori er den 
-                        beste praksis». Vi fortsetter med makro, internasjonale forhold, og bærekraftig utvikling. Du lærer å drøfte balansert med fakta, grafer og 
+                        Faget er både praktisk og teoretisk. Vi bruker i stor grad teoretiske modeller som vi anvender til å drøfte og løse praktiske problemstillinger
+                        og caser. Vi starter med mikro og markedskrysset/grafer med tilbud og etterspørsel ut fra økonomihøyskole-prinsippet om at modell-«teori er den
+                        beste praksis». Vi fortsetter med makro, internasjonale forhold, og bærekraftig utvikling. Du lærer å drøfte balansert med fakta, grafer og
                         innhenting av statistiske data. Vi jobber tett med Norges Bank Kunnskapssenteret og konkurransen Case-NM.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -199,7 +199,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
 </body>
 </html>
