--- a/programfag/entreprenørskap/index.html
+++ b/programfag/entreprenørskap/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/entreprenørskap/entreprenørskap.css">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./entreprenørskap.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Entreprenørskap</title>
 </head>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Entreprenørskap</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/Fagvalgsider_Elvebakken_VGS/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -72,8 +72,8 @@ konkurranser.
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/entreprenørskap/pungdom.png" alt="Pundom ub som vant.">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/entreprenørskap/folk.png" alt="Folk som snakker om entreprenørskap.">
+                    <img src="../../assets/imgs/entreprenørskap/pungdom.png" alt="Pundom ub som vant.">
+                    <img src="../../assets/imgs/entreprenørskap/folk.png" alt="Folk som snakker om entreprenørskap.">
                 </div>
                 <div class="elev-sitat">
                     <h3>Sitat</h3>
@@ -126,8 +126,8 @@ konkurranser.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/entreprenørskap/forretningsmodell.png" alt="Entreprenørskap forettningsmodell.">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/entreprenørskap/ue.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/entreprenørskap/forretningsmodell.png" alt="Entreprenørskap forettningsmodell.">
+                    <img src="../../assets/imgs/entreprenørskap/ue.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -160,7 +160,7 @@ konkurranser.
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
 </body>
 </html>
