--- a/assets/maler/fag_side_2_fag/index.html
+++ b/assets/maler/fag_side_2_fag/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="fag.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./fag.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
     <title>Fagnavn</title>
 </head>
 <body>
