Fikset lenker til realfag
Vi kan se ting igjen! :D

--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/geofag/geofag.css">
-    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./geofag.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
     <title>Geofag</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Geofag</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -65,8 +65,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/geofag/isbjørn.png" alt="Person som driver med kjemi">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/geofag/vulkan.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/isbjørn.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/vulkan.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -89,7 +89,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/drag_and_drop_geofag_spill/index.html" width="100%" height="520" style="border: none;"></iframe>
+                    <iframe src="../../widgets/drag_and_drop_geofag_spill/index.html" width="100%" height="520" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -126,8 +126,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/geofag/tørke.png" alt="Person som driver med kjemi">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/geofag/lyn.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/tørke.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/lyn.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -149,7 +149,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/geofag_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../widgets/geofag_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
 </body>
 </html>
