--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/programfag.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/programfag/tekforsk/tekforsk.css">
-    <link rel="icon" href="/Fagvalgsider_Elvebakken_VGS/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./tekforsk.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
     <title>Teknologi & Forskningslære</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Teknologi & Forskningslære</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/Fagvalgsider_Elvebakken_VGS/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -69,8 +69,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="TODO">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -93,7 +93,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -129,8 +129,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -151,7 +151,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="/Fagvalgsider_Elvebakken_VGS/widgets/tekforsk_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../widgets/tekforsk_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/footer.js"></script>
-    <script src="/Fagvalgsider_Elvebakken_VGS/script/global.js"></script>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
 </body>
 </html>
