fikset path på masse ting

--- a/widgets/bland_salter_spill/index.html
+++ b/widgets/bland_salter_spill/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bland_salter_spill.css">
+    <link rel="stylesheet" href="./bland_salter_spill.css">
     <title>Bland salter</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
         <div id="reagensrør-gruppe1">
             <div class="saltplassering"> <!-- Lar saltene kunne bli plassert tilbake på samme plass -->
                 <div class="salt" id="NH4Cl">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div> <!-- Div med fargen til saltet som fyller halve reagensrøret -->
                     <div class="saltnavn">NH4Cl</div>
                 </div>
