--- a/widgets/rakett_simulering/index.html
+++ b/widgets/rakett_simulering/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="rakett_simulering.css">
+    <link rel="stylesheet" href="./rakett_simulering.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>Rakett simulering</title>
 </head>
 <body>
-    <div class="spill-tittel-div">Rakett simulering  <a href="/Fagvalgsider_Elvebakken_VGS/widgets/rakett_simulering/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
+    <div class="spill-tittel-div">Rakett simulering  <a href="../../widgets/rakett_simulering/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
     <canvas id="vektor-canvas" width="480" height="330"></canvas>
     <div>
         <button id="reset-rocket">Reset</button>
@@ -56,7 +56,7 @@
             <span id="burn-time-value">0.4 s</span>
         </div>
     </div>
-    <script src="vek2.js"></script>
-    <script src="rakett_simulering.js"></script>
+    <script src="./vek2.js"></script>
+    <script src="./rakett_simulering.js"></script>
 </body>
 </html>
