--- a/widgets/rediger_css_spill/index.html
+++ b/widgets/rediger_css_spill/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="rediger_css.css">
+    <link rel="stylesheet" href="./rediger_css.css">
     <title>Rediger css'en selv!</title>
 </head>
 <body>
     <div class="tittel">Rediger css'en selv!</div>
     <textarea id="css-editor" placeholder="Skriv din CSS her..."></textarea>
-    
+
     <div id="button-row">
         <button id="apply-css">Apply CSS</button>
         <button id="reset-css">Reset CSS</button>
     </div>
-    <script src="rediger_css.js"></script>
+    <script src="./rediger_css.js"></script>
 </body>
 </html>
