--- a/widgets/vektor_spill/index.html
+++ b/widgets/vektor_spill/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="vektor_spill.css">
+    <link rel="stylesheet" href="./vektor_spill.css">
     <title>Vektor spill</title>
 </head>
 <body>
-    <div class="spill-tittel-div">Vektorer  <a href="/Fagvalgsider_Elvebakken_VGS/widgets/vektor_spill/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
+    <div class="spill-tittel-div">Vektorer  <a href="../../widgets/vektor_spill/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
     <canvas id="vektor-canvas" width="480" height="330"></canvas>
     <div id="level-knapper-div">
         <button id="level-0-knapp">Level 0</button>
@@ -26,6 +26,6 @@
             <p>I R1 spiller vektorer en vesentlig rolle. Har du lagt merke til at uansett rekkefølgen du plasserer vektorene i, vil de to punktene alltid være koblet sammen? Dette er fordi vektorene er additivt. Dette betyr at om du har en vektor fra A til B og en vektor fra B til C, vil summen av disse vektorene være en vektor fra A til C. Uansett hvilken rekkefølge du legger vektorene i. <br>1 + 2 + 5 er jo tross alt det samme som 2 + 5 + 1.</p>
         </div>
     </div>
-    <script src="vektor_spill.js"></script>
+    <script src="./.js"></script>
 </body>
 </html>
