--- a/widgets/drag_and_drop_kjemi_spill/index.html
+++ b/widgets/drag_and_drop_kjemi_spill/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="drag_and_drop_kjemi_spill.css">
+    <link rel="stylesheet" href="./drag_and_drop_kjemi_spill.css">
     <title>Drag and drop</title>
 </head>
 <body>
@@ -46,6 +46,6 @@
             <button>Nullstill!</button>
         </div>
     </div>
-    <script src="drag_and_drop_kjemi_spill.js"></script>
+    <script src="./drag_and_drop_kjemi_spill.js"></script>
 </body>
 </html>
