--- a/widgets/geofag_quiz/index.html
+++ b/widgets/geofag_quiz/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/widgets/felles_quiz_filer/quiz.css">
-    <link rel="stylesheet" href="geofag_quiz.css">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../widgets/felles_quiz_filer/quiz.css">
+    <link rel="stylesheet" href="./geofag_quiz.css">
     <title>Geofag quiz</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
         <button onclick="spillIgjen()" id="spill-igjen-knapp">SPILL IGJEN</button>
         <div id="poeng"></div>
         <script src="geofag_quiz.js"></script>
-        <script src="/Fagvalgsider_Elvebakken_VGS/widgets/felles_quiz_filer/quiz.js"></script>
+        <script src="../../widgets/felles_quiz_filer/quiz.js"></script>
     </div>
 </body>
 </html>
