--- a/widgets/tekforsk_quiz/index.html
+++ b/widgets/tekforsk_quiz/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/widgets/felles_quiz_filer/quiz.css">
-    <link rel="stylesheet" href="tekforsk_quiz.css">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../widgets/felles_quiz_filer/quiz.css">
+    <link rel="stylesheet" href="./tekforsk_quiz.css">
     <title>Tekforsk quiz</title>
 </head>
 <body>
@@ -21,8 +21,8 @@
         <button onclick="sjekkSvar()" id="svarknapp">SVAR</button>
         <button onclick="spillIgjen()" id="spill-igjen-knapp">SPILL IGJEN</button>
         <div id="poeng"></div>
-        <script src="tekforsk_quiz.js"></script>
-        <script src="/Fagvalgsider_Elvebakken_VGS/widgets/felles_quiz_filer/quiz.js"></script>
+        <script src="./tekforsk_quiz.js"></script>
+        <script src="../../widgets/felles_quiz_filer/quiz.js"></script>
     </div>
 </body>
 </html>
