--- a/widgets/tør_du_satse/index.html
+++ b/widgets/tør_du_satse/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Fagvalgsider_Elvebakken_VGS/style/global.css">
-    <link rel="stylesheet" href="tør_du_satse.css">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="./tør_du_satse.css">
     <title>Pengespill</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
             <button id="start-knapp" onclick="start()">START</button>
         </div>
         <div id="poeng"></div>
-        <script src="tør_du_satse.js"></script>
+        <script src="./tør_du_satse.js"></script>
     </div>
 </body>
 </html>
